--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -214,53 +214,64 @@ Building new constraint solvers is laborious because it typically requires \emph
 
 \section{Related Works}
 \label{related works}
-There is a large body of research on tools for conceptual design. The works that will be discussed in this section has been narrowed to approaches that either reason about qualitative (i.e. experiential, spatial) or functional (i.e. noise insulation, energy conservation, smart home security) design aspects / requirements or evaluate a design utilizing spatial reasoning techniques. The last part of this section will discuss and summarize the different approaches in the context of the work that is being done in this thesis.
+There is a large body of research on tools for conceptual design assistance. The related works that will be discussed in this section have been narrowed to tools that provide assistance to a designer and use spatial reasoning as the basis of its design analysis.
 
+%either reason about qualitative (i.e. experiential, spatial) or functional (i.e. noise insulation, energy conservation, smart home security) design aspects / requirements or evaluate a design utilizing spatial reasoning techniques. The last part of this section will discuss and summarize the different approaches in the context of the work that is being done in this thesis.
 
 \subsection{Intelligent Critic System}
-The intelligent computer-aided architectural design system (ICAAD) \cite{IntelligentCritic} is a tool that evaluates architectural design floor plans based on government regulations and interior design guidelines and checks for any that are not satisfied in the design. The focus of this research is on how to representation spatial information in the context of architectural design requirement checking.
+The intelligent computer-aided architectural design system (ICAAD) \cite{IntelligentCritic} is a tool that evaluates architectural floor plans based on government regulations and interior design guidelines. The research here focuses on  the spatial representation model for architectural design.
 
-ICAADs represents designs in an object oriented hierarchical model, which is based on architectural containment relationships, i.e. windows are contained by rooms, rooms are contained by apartments, apartments are contained by buildings, etc. Architectural components, such as rooms, windows, furniture, are represented individually as ICAAD objects in the hierarchical structure. Each object stores geometric data, such the center of the object, length and width, shape, and direction. Spatial relationships, such as proximity, visibility, relative location are extracted from the geometric data and stored in a network that connects relating objects together with their spatial relationship. 
+%The focus of this research is on how to representation spatial information in the context of architectural design requirement checking.
 
-The ICAADs inference engine matches design requirement rules (i.e. government regulations and interior deigns guidelines) against the ICAADs spatial representation structure (i.e. the hierarchical object model and the spatial networks). Violations are detected when a spatial relationship between elements are matched to a design requirement violation rule.  
+In this respect, ICAAD represents designs in an object oriented hierarchical model, which is grounded to architectural containment relationships, i.e. windows are contained by rooms, rooms are contained by apartments, and apartments are contained by buildings. Various architectural entities, such as rooms, windows and furniture are all represented individually as ICAAD objects in the hierarchical structure. Each ICAAD object is responsible for storing spatial data about the entity, including dimension, shape, and direction. Spatial relationships between entities, such as proximity and visibility, are extracted from the spatial ICAAD data and represented as a network that connects entities together based on spatial relationships. 
+
+ICAAD uses Prolog's inference capabilities to match design rules (i.e., government regulations and interior deigns guidelines) against the ICAADs representation model. Violations are detected when a spatial relationship between entities are matched to a design requirement rule.
 
 
 \subsection{The Architect's Collaborator}
-The Architect's Collaborator (TAC) \cite{KoileTAC} is a prototype design support system that evaluates a design based on abstract qualities and provides recommendations to improve the design w.r.t. these qualities. Within TAC, abstract qualities describe experiential aspects of a design in terms such as 'openness' and 'privacy'. The main contribution of TAC is that it maps abstract qualities to measurable design features in order to rank designs based on adherence to a design quality and provide recommendations for improving the design. 
+The Architect's Collaborator (TAC) \cite{KoileTAC} is a design support system that evaluates architectural designs based on architectural qualities and provides recommendations to the designer with respect to these qualities. Within TAC, architectural qualities refer to experiential aspects of a design such as \emph{openness} and \emph{privacy}. The main contribution of TAC is that it evaluates designs based on architectural qualities and provides recommendations for improving the design.
 
-For example, a designer uses TAC by specifying a goal for a specific design, such as the kitchen should be 'visibly open'. If the kitchen does not meet the goal of being visibly open, then TAC provides recommendations for improving the design. Recommendations are derived from a knowledge base that contains explanations for a goals failure, such as walls cause visual obstructions and decrease the visual openness between rooms. 
+%maps abstract qualities to measurable design features in order to rank designs based on adherence to a design quality and provide recommendations for improving the design. 
 
-The main drawback to TAC is its use of 'black box' geometric and spatial reasoning. For example, TAC measures the visible-openness of a room as the percentage of the room that is visible from another room. This definition of visible-openness uses a direct mapping between the high level conceptual requirement to the low level geometric properties of the design. 
+As an example, a designer might use TAC to evaluate a kitchen based on it being \emph{visibly open}. TAC evaluates this quality (visually open) based on a pre-defined spatial characteristic of the design. In this case, the percentage of this room (kitchen) that is visible from an adjacent room. A room is considered by TAC to be visibly open if the calculation is above a certain threshold. If it is below the threshold, TAC will provide recommendations to the designer to help increase the visual openness of the kitchen. 
 
+%If the kitchen does not meet the goal of being visibly open, then TAC provides recommendations for improving the design. Recommendations are derived from a knowledge base that contains explanations for a goals failure, such as walls cause visual obstructions and decrease the visual openness between rooms. 
 
-\subsection{Intelligence for Ambient Design}
-Bhatt, et al. proposed a system in \cite{BhattDH09} that validates a designer's conceptual requirements against an architectural design in the context of Smart Homes. The system reasons about design from a structural and functional perspective.   
+The main drawback to TAC is its use of `black box' spatial reasoning. From the example above, TAC directly maps the architectural quality of visual openness to a specific geometric characteristic of the design. This type of spatial reasoning if very specific to the definition of the problem, therefore making it difficult to expand upon. 
+
+%measures the visible-openness of a room as the percentage of the room that is visible from another room. This definition of visible-openness uses a direct mapping between the high level conceptual requirement to the low level geometric properties of the design. 
 
 \subsection{ICADS}
-The Intelligent Computer-Aided Design System (ICADS) \cite{ICADS} is a collaborative design support tool that assists a designer by providing analysis based on numerous functional aspects of the design. The aspects include analysis based on the structural system selection, lighting, noise insulation, climate control and energy conservation, space layout, and construction costs. The focus of this research is on developing a series of knowledge based software agents that collaborate within ICADS to make recommendations to the user. 
+The Intelligent Computer-Aided Design System (ICADS) \cite{ICADS} is a collaborative design support tool that assists a designer by providing functional based analysis of a design. The tool provides analysis to a designer base on several different aspects, such as lighting, noise insulation, climate control, energy conservation, space layout, and construction costs. The focus of this research is on developing a series of knowledge based software agents that collaborate within ICADS to make recommendations to the user. 
 
 \subsection{SEEDS}
-The Software Environment for Supporting the Early Phases in Building Design (SEED) project \cite{SEEDS} is a framework that supports an architect during the entire architectural design process. Specific to the work done in this thesis, SEED introduced the idea of using constraints to represent design knowledge in order to automatically generate floor layouts, in a tool referred to as SEED-layout. 
+The Software Environment for Supporting the Early Phases in Building Design (SEED) project \cite{SEEDS} is a framework that supports an architect during the entire architectural design process. Specific to the work done in this thesis, the SEED project introduced the idea of using constraints to represent design knowledge in order to automatically generate floor layouts. 
 
-Within SEED-layout, design knowledge is partitioned into two categories: design units and functional units. Design units represent the spatial and physical elements of a building. Functional units represent design requirements and constrain design units based on shape, size, placement, and non spatial attributes such as material make-up. Given a design represented in SEED-layout as design units and a set of design requirements represented as functional units, SEED-layout tries to automatically generates possible floor plans that adhere to all of the design requirements. The main contribution of this work is that the system utilizes the constraint solving abilities in a CLP framework to autonomously find design layouts that meet the design's requirement specifications.
+Within the SEED project, design knowledge is partitioned into two categories: design units and functional units. Design units represent the spatial and physical elements of a building. Functional units represent design requirements that constrain design units based on spatial attributes such as shape, size and placement, and non spatial attributes such as material make-up. 
+
+Given a design, the SEED project tries to automatically generates possible floor plans that adhere to all of the design requirements, given a set of design and functional units. The main contribution of this work is that the system utilizes the constraint solving abilities in a CLP framework to autonomously find design layouts that meet the design's requirement specifications.
 
 
 \subsection{Interior Design Configuration for a Virtual Environment}
-Calderon \emph{et. al} proposes a system that automatically configures an indoor virtual environment, with respect to placing interior design elements, by solving spatial constraint problems. The system works by solving a constraint satisfaction problem as specified, given a virtual environment represented as a discrete Cartesian grid, a set of interior design objects (desks, chairs, lamps, etc.), and a set of spatial constraints over the design objects (i.e. a desk should be at least 4 meters from a power outlet), the system searches for possible spatial configurations (i.e. placement of objects) within the virtual environment such that all of the spatial constraints are satisfied. 
+Calderon \emph{et. al} \cite{} proposed a system that automatically configures an indoor virtual environment, with respect to the placement interior design elements, by specifying the design problem in terms of spatial constraints. The system works by solving constraint satisfaction problem as specified over the space of the virtual environment.
 
-The main contribution of this work is the use of spatial constraints in the area of virtual environment design. However, the work done here is only preliminary and has several shortcomings. The domain of the virtual environment is limited to rectangular areas and is represented as a discrete Cartesian grid. This limitation means that all spatial reasoning is over the discrete finite integer domain. Additionally, the expressiveness of the spatial constraints is limited. For example, topological relationships only define two relationships, inside and outside. 
+The spatial constraint problems are defined as follows: Given a virtual environment represented as a discrete Cartesian grid, a set of interior design objects (desks, chairs, lamps, etc.), and a set of spatial constraints over the design objects (i.e., a desk should be at least 4 meters from a power outlet), the system searches for viable locations for each object within the virtual environment such that all of the spatial constraints are satisfied. 
+
+The contribution of this work lies in the use of spatial constraints for reasoning about virtual environment design. However, the work here is preliminary and has several shortcomings. To begin with, the virtual environment used in this system, is limited to a rectangular grid that is represented by discrete Cartesian coordinates. This means all spatial reasoning is over the discrete finite integer domain. Additionally, the expressiveness of the spatial constraints is limited. For example, topological relationships are define over rectangles and points with respect to the point being inside or outside the rectangle. No consideration is made for orientation, or objects with richer geometries than points and rectangles.
 
 \subsection{Others}
-The following research presents ideas that are similar to the work in this thesis, but differ from the primary works already discussed in this section because they preliminary research on the subject at hand.
+The following research presents ideas that are similar to the work in this thesis, but differ from the primary works because they preliminary research.
+
+Bhatt, et al. proposed a system in \cite{BhattDH09} that validates a designer's conceptual requirements against an architectural design in the context of Smart Homes. The system reasons about design from a structural and functional perspective.   
 
 Key proposes a descriptor language that defines architectural qualities from a computational perspective \cite{Key}. The work here is quite similar to the work in this thesis with regards to the approach that architectural qualities emerge from the precise geometric configurations of design elements and that these qualities can be discovered by spatial interpretation. The language defines architectural descriptor for concepts such as enclosure, continuity, and spaciousness and does so by interpreting the descriptor in terms of spatial properties. However, the approach here lacks the integration of qualitative spatial representation and reasoning as an intermediate layer between the high level concepts and low level geometries and instead uses a more direct approach to geometric and spatial reasoning.
 
-Borrmann introduces the idea of including predefined spatial constraints directly into a standard building production model, i.e. Industry Foundation Classes (IFC), to detect constraint violations \cite{Borrmann}. This proposal primarily focuses on the definition and integration of spatial constraints into the IFC model but it does provide some discussion on how these spatial constraints might be checked for in such an environment. While similar to CRR, this proposals approach is focused on the integration of spatial constraints into a specific building model (IFC) format and does not go into the process of generating the spatial constraints from the geometric configurations of a design. 
+Borrmann introduces the idea of including predefined spatial constraints directly into a standard building production model, i.e., Industry Foundation Classes (IFC), to detect constraint violations \cite{Borrmann}. This proposal primarily focuses on the definition and integration of spatial constraints into the IFC model but it does provide some discussion on how these spatial constraints might be checked for in such an environment. While similar to CRR, this proposals approach is focused on the integration of spatial constraints into a specific building model (IFC) format and does not go into the process of generating the spatial constraints from the geometric configurations of a design. 
 
 \subsection{Discussion}
-Table \ref{related works table} shows the various high level objectives of the tools that were discussed in the related works section, which includes requirements checking, design evaluation, and automatic floor plan configuration. Despite the differences here, the systems are all bound by a higher objective to provide computational assistance to an architect during the design process and specifically, in the context of conceptual design formalization and reasoning.
+Table \ref{related works table} shows the high level objectives of each tool that was discussed in this section. This includes requirements checking, design evaluation, and automatic floor plan configuration. Despite the differences, each system provides design assistance at a conceptual level.
 
-
+%the systems are all bound by a higher objective to provide computational assistance to an architect during the design process and specifically, in the context of conceptual design formalization and reasoning.
 \begin{table}[H]
   \begin{center}
    \scalebox{0.87}{
@@ -277,11 +288,13 @@ Table \ref{related works table} shows the various high level objectives of the t
 \label{related works table}
 \end{table}   
 
-Out of this group ICAADS is the most similar to CRR. Both systems provide a framework for checking design requirement violations using qualitative spatial reasoning. Despite the similarities, there are many differences and advantages to both. ICAADS focuses on the representation model for architectural designs in the context of requirement reasoning and gives little attention or discussion to the underlying techniques for spatial reasoning and spatial abstraction for CAAD based models. While this approach allows the system to reason automatically over the entire design, however it does so by relying on the underlying spatial reasoning system which is described like a 'black box'. Extending 'black box' reasoning can be quite difficult when spatial functions are built only to solve a specific problem. On the other hand, CRR focuses on building spatial reasoning modules based on formal qualitative spatial calculi (\cite{scc} \cite{opra} \cite{topolog}), formalization and spatial interpretation of architectural concepts (i.e. experiential and spatial qualities found in architecture), and the abstraction of CAAD based geometric representations into the qualitative spatial domain. The advantages to this approach is that the reasoner is extensible, i.e. it is easy to build new design requirements by using the existing services of the spatial reasoners.  
+Out of this group the ICAAD tool is the most similar to the CRR. Both systems provide a framework for checking design requirements using qualitative spatial relations. Despite the similarities, there are many differences. ICAADS focuses on the spatial representation model for architectural designs in the context of requirement reasoning and gives little attention or discussion to the underlying techniques for spatial reasoning and spatial abstraction. While the ICAAD approach allows the system to reason automatically over the entire design, it does so by relying on the underlying 'black box' spatial reasoning. Extending 'black box' reasoning can be quite difficult because spatial functions are built only to solve a specific problem. On the other hand, the CRR uses general qualitative spatial reasoning and formal spatial calculi to reason over architectural designs. The advantages to this approach is that the reasoner is extensible, i.e., it is easy to build new design requirements by using the existing services of the spatial reasoners.  
 
-Table \ref{functionality table} shows the different functionality between the related works discussed above. This includes whether of not the tool supports reasoning about experiential qualities (i.e. openness, privacy), functional aspects (i.e. cost, noise insulation, security), or artifactual extension (i.e. functional space), if the tool incorporates spatial representation and reasoning techniques and formal qualitative spatial calculi, if the system provide the user with feedback or recommendations based on design analysis, and if the system uses constraint based reasoning.
+%s based on formal qualitative spatial calculi (\cite{scc} \cite{opra} \cite{topolog}), formalization and spatial interpretation of architectural concepts (i.e. experiential and spatial qualities found in architecture), and the abstraction of CAAD based geometric representations into the qualitative spatial domain.
 
-\begin{table}[H]
+Table \ref{functionality table} shows the different functionality between the related works discussed above. This includes whether of not the tool supports reasoning about experiential qualities (openness, privacy), functional aspects (cost, noise insulation, security), and artifactual extension (operational / functional space), if the tool incorporates spatial representation and reasoning techniques and formal qualitative spatial calculi, if the system provide the user with feedback or recommendations based on design analysis, and if the system uses constraint based reasoning.
+
+\begin{table}[t]
   \begin{center}
   \scalebox{0.87}{
   \begin{tabular}{ | r | c | c | c | c | c | c | c |}  
@@ -302,7 +315,7 @@ Table \ref{functionality table} shows the different functionality between the re
 \label{functionality table}
 \end{table} 
 
-CRR provides most of the functionality of the other systems expect it does not provide feedback to the user and it does not evaluate a design based on some metric. The indention for this version of CRR is to provide a solid framework for spatial reasoning over architectural designs and requirement reasoning. Future version of the tool might incorporate these aspects. 
+The CRR provides most of the functionality of the other systems expect it does not provide feedback to the user and it does not evaluate a design based on metrics. The indention for this version of CRR is to provide a solid framework for spatial reasoning over architectural designs and requirement reasoning. Future version of the tool might incorporate these aspects. 
 
 Table \ref{spatial table} shows the spatial reasoning capabilities for each system. It includes spatial reasoning for topological relationships, orientation (intrinsic and extrinsic), distance, and metric. Metric relationships refer to quantitative geometric functions such as the calculation of length or area.  
 
@@ -320,11 +333,11 @@ Table \ref{spatial table} shows the spatial reasoning capabilities for each syst
    \end{tabular}
   }
   \end{center}
-\caption{Types of Spatial Reasoning}
+\caption{Spatial Reasoning}
 \label{spatial table}
 \end{table}
 
-The CRR is the only tool in the group which provides support for every type of spatial reasoning. Additionally, it is the only system that does so using formal qualitative spatial reasoning and representation techniques. This is one of the main advantages of the CRR and is one of the main contribution in the thesis. Using a broad variety of of spatial relationships (topological, orientational, distance, metric) CRR provides flexibility and a rich set of spatial relationships to build design requirements. This is important because the spatial configurations that make up a building are complex and need flexibility in terms of the way they are characterized and reasoned over. 
+The CRR is the only tool in the group which provides support for every type of spatial reasoning. Additionally, it is the only system that does so using formal qualitative spatial reasoning and representation techniques. This is one of the main advantages of the CRR. Using a broad variety of of spatial relationships (topological, orientational, distance, metric) the CRR provides flexibility and a rich set of spatial relationships to build design requirements. This is important because the spatial configurations that make up a building are complex and need flexibility in terms of the way they are characterized and reasoned over. 
 
 
 \chapter{Conceptual Requirements Reasoner}
